Fix logo and text layout on mobile
Removes unnecesarry padding on the hero section that was causing the logo to be cut off and the "SourceCred" text to wrap onto the next line.

Test Plan: Ensure the logo is centered and text is on one line when viewing on mobile

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -16,12 +16,6 @@
   color: var(--sc-text-color);
 }
 
-@media screen and (max-width: 966px) {
-  .heroBanner {
-    padding: 2rem;
-  }
-}
-
 .buttons {
   display: flex;
   align-items: center;
